# esp32s2test

./: AppParameter.h  CMakeLists.txt  Device.bat  Fullclean.bat  GitUndo.bat  Sx750_Project.py  erase.bat  flash.bat  partitions.csv  sdkconfig  sdkconfig.old
FileServer/: CMakeLists.txt  CMakeListsSwve.txt  FileMain.c  FileMain.h  demo_con.html  demo_home.html  file_server.c  upload_script.html  upload_script_old.html
I2C/: cmd_i2ctools.c  i2ctools_example_main.c
Img/: 0Rename_C_to_H.bat  Image0.h
JsonSocket/: CMakeLists.txt  Html.h  JsonSocket.c  JsonSocket.h
LED/: CMakeLists.txt  Led_Main.c  Led_Main.h
NVS/: CMakeLists.txt  nvsUserData.c  nvsUserData.h
RTC/: CMakeLists.txt  RTC.c  RTC.h  RTC_GMT.c  RTC_GMT.h
Tft/: AsciiData.h  CMakeLists.txt  Img.h  TftLcdSpi.c  TftLcdSpi.h  font.h
Uart/: CMakeLists.txt  uart_main.c  uart_main.h
mDNS/: CMakeLists.txt  mdns_main.c  mdns_main.h
main/: CMakeLists.txt  KeyFunction.c  KeyFunction.h  main.c
ota_main/: CMakeLists.txt  ota_main.c  ota_main.h
